--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dev_dependencies:
     sdk: flutter
   path_provider: ^2.1.5
   pdf: ^3.11.1
+  permission_handler: ^11.3.1
+  share_plus: ^10.1.3
+  syncfusion_flutter_pdf: ^28.1.33
   syncfusion_flutter_pdfviewer: ^28.1.33
   syncfusion_flutter_signaturepad: ^28.1.33
 
