feat: adding face verification for ios

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,9 +45,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+
+	
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need access to your photo library to share files</string>
 	<key>NSCameraUsageDescription</key>
 	<string>We need access to your camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>your usage description here</string>
 </dict>
 </plist>
